# sql-alchemy-example

./: pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: students.html
